The repository is created.

--- a/tutorial/Tutorial02.ipynb
+++ b/tutorial/Tutorial02.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# LESS is More\n",
     "\n",
-    "Consider a set of feature-response pairs $(\\bm{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\bm{X}, \\bm{y})$. \n",
+    "Consider a set of feature-response pairs $(\\mathbf{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\{X}, \\mathbf{y})$. \n",
     "\n",
-    "The following figure shows what lies under the hood of LESS. The algorithm starts with creating (random) **subsets** $(\\bm{X}_j, \\bm{y}_j) \\subseteq (\\bm{X}, \\bm{y})$, and for each subset $j$, the algorithm learns a **local estimator** $\\mathcal{L}(\\bm{x} | \\bm{X}_j, \\bm{y}_j)$. As we only use different subsets for training, we expect that these predictions are more reliable when a test sample is __close__ to subset $\\bm{X}_j$. Thus, we also define a **distance function** $\\phi(\\bm{x}, \\bm{X}_j)$ that plays the role of weighting, and it returns a value that is inversely proportional to the distance between a sample and a subset. The local predictions are then combined to yield an overall **global estimator** $\\mathcal{G}(\\bm{x} | \\bm{Z}, \\bm{y})$. Here, $\\bm{Z}$ is the $n \\times m$ matrix, whose rows are formed by the vectors\n",
+    "The following figure shows what lies under the hood of LESS. The algorithm starts with creating (random) **subsets** $(\\mathbf{X}_j, \\mathbf{y}_j) \\subseteq (\\mathbf{X}, \\mathbf{y})$, and for each subset $j$, the algorithm learns a **local estimator** $\\mathcal{L}(\\mathbf{x} | \\mathbf{X}_j, \\mathbf{y}_j)$. As we only use different subsets for training, we expect that these predictions are more reliable when a test sample is __close__ to subset $\\mathbf{X}_j$. Thus, we also define a **distance function** $\\phi(\\mathbf{x}, \\mathbf{X}_j)$ that plays the role of weighting, and it returns a value that is inversely proportional to the distance between a sample and a subset. The local predictions are then combined to yield an overall **global estimator** $\\mathcal{G}(\\mathbf{x} | \\mathbf{Z}, \\mathbf{y})$. Here, $\\mathbf{Z}$ is the $n \\times m$ matrix, whose rows are formed by the vectors\n",
     "$$\n",
-    "  \\bm{z}_i = \\left[\\phi(\\bm{x}_i, \\bm{X}_j) \\mathcal{L}(\\bm{x}_i |\\bm{X}_j, \\bm{y}_j)\\right]_{j=1}^m, \\ \\ i=1, \\dots, n.\n",
+    "  \\mathbf{z}_i = \\left[\\phi(\\mathbf{x}_i, \\mathbf{X}_j) \\mathcal{L}(\\mathbf{x}_i |\\mathbf{X}_j, \\mathbf{y}_j)\\right]_{j=1}^m, \\ \\ i=1, \\dots, n.\n",
     "$$\n",
     "\n",
     "<img src=\"img/LESS1Level.png\"  width=981 height=557/>\n",
@@ -382,9 +382,9 @@
     "\n",
     "The last part of LESS relies on selecting the distance of each sample to a given subset. As default, LESS uses\n",
     "$$\n",
-    "  \\phi(\\bm{x}_i, \\bm{X}_j) = \\exp\\left(-\\tfrac{1}{m^2}\\|\\bm{x}_i - \\bar{\\bm{x}}_j\\|\\right),\n",
+    "  \\phi(\\mathbf{x}_i, \\mathbf{X}_j) = \\exp\\left(-\\tfrac{1}{m^2}\\|\\mathbf{x}_i - \\bar{\\mathbf{x}}_j\\|\\right),\n",
     "$$\n",
-    "where $m$ is the number of subsets (`n_subsets`) and $\\bar{\\bm{x}_j}$ is the centroid of the samples in subset $\\bm{X}_j$. These distances play the role of weighting each local estimator's prediction. Then, all these distances are normalized so that they will add up to one. If you do not want to normalize these weights, then you can set the parameter `d_normalize` to `False`. However, if `global_estimator=None`, then LESS sets `d_normalize` to `True` automatically.\n",
+    "where $m$ is the number of subsets (`n_subsets`) and $\\bar{\\mathbf{x}_j}$ is the centroid of the samples in subset $\\mathbf{X}_j$. These distances play the role of weighting each local estimator's prediction. Then, all these distances are normalized so that they will add up to one. If you do not want to normalize these weights, then you can set the parameter `d_normalize` to `False`. However, if `global_estimator=None`, then LESS sets `d_normalize` to `True` automatically.\n",
     "\n",
     "Like all other parts of LESS, users are free to change the distance function. The only requirement is that the distance function should take two `numpy` arrays as input and returns a `numpy` array of distances as output. Here is an example function similar to Laplacian kernel."
    ]
