The repository is created.

--- a/tutorial/Tutorial02.ipynb
+++ b/tutorial/Tutorial02.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# LESS is More\n",
     "\n",
-    "Consider a set of feature-response pairs $(\\mathbf{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\{X}, \\mathbf{y})$. \n",
+    "Consider a set of feature-response pairs $(\\mathbf{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\mathbf{X}, \\mathbf{y})$. \n",
     "\n",
     "The following figure shows what lies under the hood of LESS. The algorithm starts with creating (random) **subsets** $(\\mathbf{X}_j, \\mathbf{y}_j) \\subseteq (\\mathbf{X}, \\mathbf{y})$, and for each subset $j$, the algorithm learns a **local estimator** $\\mathcal{L}(\\mathbf{x} | \\mathbf{X}_j, \\mathbf{y}_j)$. As we only use different subsets for training, we expect that these predictions are more reliable when a test sample is __close__ to subset $\\mathbf{X}_j$. Thus, we also define a **distance function** $\\phi(\\mathbf{x}, \\mathbf{X}_j)$ that plays the role of weighting, and it returns a value that is inversely proportional to the distance between a sample and a subset. The local predictions are then combined to yield an overall **global estimator** $\\mathcal{G}(\\mathbf{x} | \\mathbf{Z}, \\mathbf{y})$. Here, $\\mathbf{Z}$ is the $n \\times m$ matrix, whose rows are formed by the vectors\n",
     "$$\n",
@@ -565,7 +565,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "56fcc6d0",
    "metadata": {},
    "outputs": [
     {
