The repository is created.

--- a/tutorial/Tutorial02.ipynb
+++ b/tutorial/Tutorial02.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# LESS is More\n",
     "\n",
-    "Consider a set of feature-response pairs $(\\mathbf{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\mathbf{X}, \\mathbf{y})$. \n",
+    "We are now ready to dig deep into LESS. Consider a set of feature-response pairs $(\\mathbf{x}_i, y_i)$, $i=1, \\dots, n$. To simplify our notation, we denote this dataset by $(\\mathbf{X}, \\mathbf{y})$. \n",
     "\n",
     "The following figure shows what lies under the hood of LESS. The algorithm starts with creating (random) **subsets** $(\\mathbf{X}_j, \\mathbf{y}_j) \\subseteq (\\mathbf{X}, \\mathbf{y})$, and for each subset $j$, the algorithm learns a **local estimator** $\\mathcal{L}(\\mathbf{x} | \\mathbf{X}_j, \\mathbf{y}_j)$. As we only use different subsets for training, we expect that these predictions are more reliable when a test sample is __close__ to subset $\\mathbf{X}_j$. Thus, we also define a **distance function** $\\phi(\\mathbf{x}, \\mathbf{X}_j)$ that plays the role of weighting, and it returns a value that is inversely proportional to the distance between a sample and a subset. The local predictions are then combined to yield an overall **global estimator** $\\mathcal{G}(\\mathbf{x} | \\mathbf{Z}, \\mathbf{y})$. Here, $\\mathbf{Z}$ is the $n \\times m$ matrix, whose rows are formed by the vectors\n",
     "$$\n",
@@ -22,7 +22,7 @@
     "2. Setting local and global estimators\n",
     "3. Defining a distance function\n",
     "\n",
-    "In the subsequent part of this tutorial, we will discuss how to change any one of these parts (or removing some) leads to a new model. This makes LESS a very flexible learning algorithm."
+    "Next, we will discuss how to change any one of these parts (or removing some) leads to a new model. This makes LESS a very flexible learning algorithm."
    ]
   },
   {
@@ -32,11 +32,11 @@
    "source": [
     "## Part 1: Selecting Subsets\n",
     "\n",
-    "There are two main ways of selecting the subsets in LESS: random subset generation, and clustering.\n",
+    "There are two main ways of selecting the subsets in LESS: random subset generation and clustering.\n",
     "\n",
     "**Random Subsets**\n",
     "\n",
-    "The first and the default way is to select a fraction of the samples randomly to construct each subset. This also automatically determines the number of subsets. This fraction can be set by the parameter `frac` which is set to 0.05 as default. LESS first selects anchors, and then creates the subsets with the neighboring samples to these anchors. Thus, the number of anchors is equal to the number of subsets. In its current version of LESS, the distance between the anchors and the neighboring solutions are evaluated by Euclidean distance ($\\ell_2$-norm)."
+    "The first, and the default, way is to randomly select a fraction of the samples to construct each subset. This also automatically determines the number of subsets. This fraction can be set by the parameter `frac`, which has the default value of 0.05."
    ]
   },
   {
@@ -96,7 +96,9 @@
    "id": "e6fcf700",
    "metadata": {},
    "source": [
-    "You can also set either the number of subsets (`n_subsets`), or the number of samples in each subset (`n_neighbors`), or even both. If you also set the parameter `frac`, then your input for `n_subsets` and `n_neighbors` are ignored."
+    "LESS, first selects some anchors, and then creates the subsets with the neighboring samples to these anchors. Thus, the number of anchors is equal to the number of subsets. In its current version of LESS, the distance between the anchors and the neighboring solutions are evaluated as Euclidean distance ($\\ell_2$-norm).\n",
+    "\n",
+    "You can also set either the number of subsets (`n_subsets`), or the number of samples in each subset (`n_neighbors`), or even both. Please note that if you also set the parameter `frac`, then your input for `n_subsets` and `n_neighbors` are ignored."
    ]
   },
   {
@@ -158,7 +160,9 @@
    "id": "84848d79",
    "metadata": {},
    "source": [
-    "Since the subsets are created randomly, LESS is run  for a fixed number of replication to decrease the variance. The corresponding parameter is called `n_replications`, and it is set to 20 as default. There is an interesting take here about the bias-variance trade-off. Going back to our one-dimensional sythetic example from the first part of the tutorial, we can demonstrate the effects of this trade-off."
+    "Since the local subsets are created randomly, LESS is run for a fixed number of replication and the average over these replications is reported. This replication step decreases the variance. The corresponding parameter is called `n_replications`, and it is set to 20 as default. \n",
+    "\n",
+    "In fact, there is an interesting take here about the bias-variance trade-off. Going back to our one-dimensional synthetic example from the first part of the tutorial, we can demonstrate the effects of this trade-off."
    ]
   },
   {
@@ -217,7 +221,7 @@
    "id": "d080a17c",
    "metadata": {},
    "source": [
-    "This panel of figures show that as the number of subsets becomes too large, then LESS may overfit to the training data (less bias). However, this may cause an increase in variance. Hence, the trade-off."
+    "This panel of figures show that as the number of subsets becomes too large, LESS may start to overfit to the training data (less bias). However, this may also cause an increase in variance. Hence, the trade-off."
    ]
   },
   {
@@ -288,7 +292,7 @@
    "source": [
     "## Part 2: Setting Local and Global Estimators\n",
     "\n",
-    "LESS uses [linear regressors](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html) as its default local and global estimators. However, you are free to use most of the `scikit-learn`regression methods, as long as they provide the usual `fit()` and `predict()` functions. The corresponding parameters are `local_estimator` and `global_estimator`. By the help of `lambda` functions, you can also change the parameters used with these regressors. \n",
+    "LESS uses [linear regressors](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html) as its default local and global estimators. However, you are free to use most of the `scikit-learn` regressors, as long as they provide the usual `fit()` and `predict()` functions. Here, the corresponding parameters are `local_estimator` and `global_estimator`. By the help of `lambda` functions, you can also change the parameters used with these regressors. \n",
     "\n",
     "In the following examples, we use gradient boosting for the global estimator, and decision trees for the the local estimators."
    ]
@@ -331,7 +335,7 @@
    "id": "ccd3274c",
    "metadata": {},
    "source": [
-    "Of course, you can also try different estimators with clustering. You can even remove a global estimator (`global_estimator=None`) and obtain the prediction as a weighted average of the local estimators. It is important to note that removing a local estimator by setting it to `None` is not possible."
+    "You can also try different estimators with clustering. One can even remove the global estimator (`global_estimator=None`) and obtain a prediction as the weighted average of the local estimators. It is important to note that removing a local estimator by setting it to `None` is not allowed."
    ]
   },
   {
@@ -370,7 +374,7 @@
    "id": "402267a4",
    "metadata": {},
    "source": [
-    "Without the global estimator, the prediction is really off."
+    "For this example, the prediction is really off without the global estimator."
    ]
   },
   {
@@ -384,22 +388,20 @@
     "$$\n",
     "  \\phi(\\mathbf{x}_i, \\mathbf{X}_j) = \\exp\\left(-\\tfrac{1}{m^2}\\|\\mathbf{x}_i - \\bar{\\mathbf{x}}_j\\|\\right),\n",
     "$$\n",
-    "where $m$ is the number of subsets (`n_subsets`) and $\\bar{\\mathbf{x}_j}$ is the centroid of the samples in subset $\\mathbf{X}_j$. These distances play the role of weighting each local estimator's prediction. Then, all these distances are normalized so that they will add up to one. If you do not want to normalize these weights, then you can set the parameter `d_normalize` to `False`. However, if `global_estimator=None`, then LESS sets `d_normalize` to `True` automatically.\n",
+    "where $m$ is the number of subsets (`n_subsets`) and $\\bar{\\mathbf{x}}_j$ is the centroid of the samples in subset $\\mathbf{X}_j$. These distances play the role of weighting each local estimator's prediction. Then, all these distances are normalized so that they will add up to one. If you do not want to normalize these weights, then you can set the parameter `d_normalize` to `False`. However, if `global_estimator=None`, then LESS sets `d_normalize` to `True` automatically.\n",
     "\n",
-    "Like all other parts of LESS, users are free to change the distance function. The only requirement is that the distance function should take two `numpy` arrays as input and returns a `numpy` array of distances as output. Here is an example function similar to Laplacian kernel."
+    "Like all other parts of LESS, users are free to change the distance function. The only requirement is that the distance function should take two `numpy` arrays as input, and returns a `numpy` array of distances as output. Below, we give an example function similar to Laplacian kernel."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "d94bef96",
    "metadata": {},
    "outputs": [],
    "source": [
     "def laplacian(data, center, coeff=1.0):\n",
-    "    '''\n",
-    "    Laplacian kernel - L1 norm\n",
-    "    '''\n",
+    "    \n",
     "    return np.exp(-coeff * np.linalg.norm(np.array(data - center, dtype=float), ord=1, axis=1))"
    ]
   },
@@ -408,7 +410,7 @@
    "id": "9956cae3",
    "metadata": {},
    "source": [
-    " When the distance function requires more parameters, this can be achieved again by `lambda` functions. "
+    " When the distance function requires more parameters, this can be achieved again by defining a `lambda` function. "
    ]
   },
   {
@@ -479,7 +481,7 @@
    "id": "0520c2c9",
    "metadata": {},
    "source": [
-    "A final remark: If you use a clustering method and the method also provides the cluster centers, then LESS uses the cluster centers instead of the centroids of the samples in the subsets."
+    "A final remark, we should point out that if you use a clustering method and the method also provides the cluster centers, then LESS uses the cluster centers instead of the centroids of the samples in the subsets."
    ]
   },
   {
@@ -489,9 +491,9 @@
    "source": [
     "## Other Parameters\n",
     "\n",
-    "We conclude the tutorial with the remaining four parameters `random_state`, `val_size`, and `tree_method`. \n",
+    "We conclude the tutorial with the remaining three parameters `random_state`, `val_size`, and `tree_method`. \n",
     "\n",
-    "If you set `random_state`to an integer value, LESS will use the same random seed for all random elements. This guarantees to obtain the same result with each call. "
+    "If you set `random_state` to an integer value, LESS will use the same random seed for all random elements. This guarantees to obtain the same result with each call. "
    ]
   },
   {
@@ -531,7 +533,7 @@
    "id": "6a9a3c5b",
    "metadata": {},
    "source": [
-    "Default LESS uses the entire dataset for creating the subsets and for fitting the estimators. An option is to further split the dataset into training and validation sets. Then, training set is used for the local estimators and the validation set is used for the global estimator. This option can be enable by setting the parameter `val_size` to a value from the interval $(0 , 1)$. This value shows the fraction of the dataset reserved for the validation."
+    "Default LESS uses the entire dataset for creating the subsets and for fitting the estimators. An option is to further split the dataset into training and validation sets. Then, training set is used for the local estimators and the validation set is used for the global estimator. This option can be enabled by setting the parameter `val_size` to a value from the interval $(0 , 1)$. This value shows the fraction of the dataset that will be reserved for the validation."
    ]
   },
   {
@@ -559,7 +561,7 @@
    "id": "bd3b8c1b",
    "metadata": {},
    "source": [
-    "The very last optional parameter `tree_method` specifies the algorithm used for searching for the closest neighbors to each anchor. By default, LESS uses [`KDTree`](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KDTree.html). This method can also be replaced by another function. This function should take a `numpy` array representing the data and the number of neighbors as input parameters. The output is expected to be a tree for querying the nearest neighbors. Here is an example function using [`BallTree`](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.BallTree.html#sklearn.neighbors.BallTree) from `scikit-learn`."
+    "The very last optional parameter `tree_method` specifies the algorithm used for searching the closest neighbors to each anchor. By default, LESS uses [`KDTree`](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KDTree.html). This method can also be replaced by another function, which should take a `numpy` array (representing the data) and the number of neighbors as input parameters. The output is expected to be a tree for querying the nearest neighbors. Here is an example function using [`BallTree`](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.BallTree.html#sklearn.neighbors.BallTree) from `scikit-learn`."
    ]
   },
   {
@@ -583,6 +585,22 @@
     "LESS_model = LESSRegressor(random_state=2021, val_size=0.5, tree_method=tr_method)\n",
     "y_pred = LESS_model.fit(X_train, y_train).predict(X_test)\n",
     "print('Test error of LESS: {0:.2f}'.format(mean_squared_error(y_pred, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9991e459",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "\n",
+    "We hope that this tutorial shows the flexible structure of LESS. There are many ideas that one can consider in the future. Here is a quick list with only a few of them: \n",
+    "\n",
+    "- Using different local estimators for different subsets\n",
+    "- Using LESS itself as a local or global estimator (LESSception)\n",
+    "- Parallel implementation for huge datasets\n",
+    "- Implementation for an online learning setting\n",
+    "- ..."
    ]
   }
  ],
