Setup is ready. Colab notebooks are on their way.

--- a/Tutorial02.ipynb
+++ b/Tutorial02.ipynb
@@ -221,14 +221,8 @@
    "id": "d080a17c",
    "metadata": {},
    "source": [
-    "This panel of figures show that as the number of subsets becomes too large, LESS may start to overfit to the training data (less bias). However, this may also cause an increase in variance. Hence, the trade-off."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dbb105be",
-   "metadata": {},
-   "source": [
+    "This panel of figures show that as the number of subsets becomes too large, LESS may start to overfit to the training data (less bias). However, this may also cause an increase in variance. Hence, the trade-off.\n",
+    "\n",
     "**Clustering**\n",
     "\n",
     "The second way for subset selection is using a clustering method with the parameter `cluster_method`. LESS works with several [`scikit-learn` clustering methods](https://scikit-learn.org/stable/modules/clustering.html). Here is an example with [K-means](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans)."
@@ -374,14 +368,8 @@
    "id": "402267a4",
    "metadata": {},
    "source": [
-    "For this example, the prediction is really off without the global estimator."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b33a6768",
-   "metadata": {},
-   "source": [
+    "For this example, the prediction is really off without the global estimator.\n",
+    "\n",
     "## Part 3: Defining a Distance Function\n",
     "\n",
     "The last part of LESS relies on selecting the distance of each sample to a given subset. As default, LESS uses\n",
@@ -481,14 +469,8 @@
    "id": "0520c2c9",
    "metadata": {},
    "source": [
-    "A final remark, we should point out that if you use a clustering method and the method also provides the cluster centers, then LESS uses the cluster centers instead of the centroids of the samples in the subsets."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "250b7630",
-   "metadata": {},
-   "source": [
+    "We should point out that if you use a clustering method and the method also provides the cluster centers, then LESS uses the cluster centers instead of the centroids of the samples in the subsets.\n",
+    "\n",
     "## Other Parameters\n",
     "\n",
     "We conclude the tutorial with the remaining three parameters `random_state`, `val_size`, and `tree_method`. \n",
